Push toolbar for code block first answers down to avoid getting clipped

--- a/src/vs/workbench/contrib/chat/browser/media/chat.css
+++ b/src/vs/workbench/contrib/chat/browser/media/chat.css
@@ -306,7 +306,14 @@
 }
 
 .interactive-item-container .value .rendered-markdown > div[data-code]:first-child {
+	/* Code blocks at the beginning of an answer should not have a margin as it means it won't align
+	 * with the agent icon*/
 	margin-top: 0;
+}
+.interactive-item-container .value .rendered-markdown > div[data-code]:first-child .interactive-result-code-block .interactive-result-code-block-toolbar > .monaco-action-bar,
+.interactive-item-container .value .rendered-markdown > div[data-code]:first-child .interactive-result-code-block .interactive-result-code-block-toolbar > .monaco-toolbar {
+	/* Override the top to avoid the toolbar getting clipped by overflow:hidden */
+	top: 6px;
 }
 
 .interactive-item-container .value .rendered-markdown .codicon {
